test_files/compile_error/data_in_text.s
foo:
    .asciiz "hello!\n"

main:
    li  $v0, 4
    la  $a0, foo
    syscall

    jr  $ra
